# rpcx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICSENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml
examples/: websockets.py
src/rpcx/: __init__.py  client.py  manager.py  message.py  rpc.py  server.py  websockets.py
tests/: conftest.py  test_client.py  test_functional.py  test_manager.py  test_message.py  test_server.py  test_server_rpc.py  test_websockets.py
