[tool.poetry]
name = "rpcx"
version = "0.3.0"
description = "Asynchronous RPC client/server with streaming support"
authors = ["Jordan Speicher <jordan@jspeicher.com>"]
license = "MIT"
repository = "https://github.com/uSpike/rpcx"
readme = "README.md"
classifiers = [
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "rpcx", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^4"
msgpack = "^1"
websockets = "^10"

[tool.poetry.dev-dependencies]
msgpack-types = "^0.2"
pytest = "^7.0"
mypy = "^1.0"
pytest-cov = "^4"
trio = "^0.22"
pytest-mock = "^3.7"
tox = "^4.4"
mock = {version = "^5.0", python = "<3.8"}
asyncstdlib = "^3.10"
exceptiongroup = { version = "^1.1.3", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
strict = true
show_column_numbers = true
show_error_codes = true
files = "src/**.py"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.flakeheaven]
format = "colored"
show_source = true
max_line_length = 120

[tool.flakeheaven.plugins]
# Ignore redefinition of variable name in new scope
pyflakes = ["+*", "-F823"]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]

[tool.flakeheaven.exceptions."**/__init__.py"]
# Ignore unused imports in __init__.py files
pyflakes = ["-F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --no-cov-on-fail --cov-fail-under=100"
